# GraphExplorer

./: .gitignore  README.md  requirements.txt  run.sh
api/: pyproject.toml  setup.py
api/graph-explorer-api/model/: graph.py
api/graph-explorer-api/plugins/: data_source_plugin.py  visualizer_plugin.py
api/graph_explorer_api/model/: edge.py  graph.py  node.py
api/graph_explorer_api/plugins/: base.py  data_source_loaders.py  data_source_plugin.py  visualizer_plugin.py
block-visualizer/: pyproject.toml
block_visualizer/: pyproject.toml
block_visualizer/block_visualizer/: block_visualizer.py
block_visualizer/block_visualizer/templates/: block_visualizer.html
config/: data_source_json_parser_config.json  data_source_xml_parser_config.json
data-source-json/: pyproject.toml
data-source-xml/: pyproject.toml
data_source_json/: pyproject.toml
data_source_json/data_source_json/: configuration.py  data_source_parser.py  loader.py  main.py  parser.py
data_source_json/data_source_json/test_files/: test-smaller.json  test.json  test2-no-dates.json  test2.json
data_source_xml/: pyproject.toml
data_source_xml/data_source_xml/: configuration.py  data_source_parser.py  loader.py  main.py  parser.py
data_source_xml/data_source_xml/test_files/: simple_longer_test.xml  test.xml
data_source_xml/test_files/: test.xml
graph-explorer/: pyproject.toml
graph-explorer/graph_explorer/: settings.py
graph_explorer/: pyproject.toml
graph_explorer/graph_explorer/: apps.py  settings.py  urls.py  views.py
graph_explorer/graph_explorer/static/: style.css
graph_explorer/graph_explorer/templates/: base.html  bird_view.html  data_source_configuration.html  index.html  tree_view.html
platform/: pyproject.toml
simple-visualizer/: pyproject.toml
simple_visualizer/: pyproject.toml
simple_visualizer/simple_visualizer/: simple_visualizer.py
simple_visualizer/simple_visualizer/templates/: simple_visualizer.html
(+27 files in other folders)
